# BaizeDB

./: .gitignore  README.md  index.html  package-lock.json  package.json  rust_output.txt  tailwind.config.js  tsconfig.json
.workbuddy/: expert-history.json
.workbuddy/memory/: 2026-04-09.md  MEMORY.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: connection.rs  database.rs  harness.rs  llm.rs  migration.rs  mod.rs  query.rs  redis.rs
src-tauri/src/commands/migration/: mysql_source.rs  mysql_target.rs  postgres_source.rs  postgres_target.rs  types.rs
src-tauri/src/database/: db_ops.rs  mod.rs  mysql_ops.rs  pg_ops.rs  wrapper.rs
src-tauri/src/store/: connection_store.rs  harness_analyzer.rs  harness_executor.rs  harness_tools.rs  harness_types.rs  llm_analyzer.rs  mod.rs  relation_store.rs
src/components/common/: ConfirmModal.tsx  ContextMenu.tsx
src/components/connection/: ConnectionDialog.tsx
src/components/editor/: QueryEditor.tsx  ResultTable.tsx  TabsArea.tsx
src/components/layout/: MainLayout.tsx  TitleBar.tsx
src/components/migration/: MigrationDialog.tsx
src/components/redis/: RedisKeyViewer.tsx
src/components/settings/: LlmSettingsModal.tsx
src/components/sidebar/: ConnectionTree.tsx  Sidebar.tsx
src/components/table/: CreateTableModal.tsx  SchemaEditor.tsx  TableViewer.tsx
src/components/visualization/: ChartDBVisualizer.tsx  HarnessAnalysisPanel.tsx  SchemaVisualizer.tsx
src/store/: index.ts
src/types/: index.ts
src/utils/: api.ts  cellValue.ts  sqlParser.ts
